# flutter_adblocker_webview

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.fvm/versions/: 3.24.3
.github/: FUNDING.yml
.github/workflows/: tests.yml
adblocker_core/: .gitignore  README.md  ffigen.yaml  pubspec.yaml
adblocker_core/android/: CMakeLists.txt  build.gradle  settings.gradle
adblocker_core/android/src/main/: AndroidManifest.xml
adblocker_core/android/src/main/kotlin/com/islamdidarmd/adblocker_core/: AdblockerCorePlugin.kt
adblocker_core/android/src/test/kotlin/com/islamdidarmd/adblocker_core/: AdblockerCorePluginTest.kt
adblocker_core/example/: README.md  pubspec.yaml
adblocker_core/example/assets/: adguard_annyoance.txt  easy_privacy_lite.txt
adblocker_core/example/integration_test/: adblocker_filter_test.dart  plugin_integration_test.dart
adblocker_core/example/lib/: main.dart
adblocker_core/example/test/: widget_test.dart
adblocker_core/ios/: adblocker_core.podspec
adblocker_core/ios/Classes/: AdblockerCorePlugin.swift  adblocker_core.c  adblocker_core.cpp  platform_app.c
adblocker_core/lib/: adblocker_core.dart  adblocker_core_method_channel.dart  adblocker_core_platform_interface.dart
adblocker_core/lib/src/: adblocker_core_binder.dart  adblocker_filter.dart  easylist_parser.dart  filter.dart
adblocker_core/native/: adblocker_core.cpp  adblocker_core.h
adblocker_core/native/parser/: easylist_parser.cpp  easylist_parser.h
adblocker_core/shared/: hello.c  hello.h
adblocker_core/test/: adblocker_core_method_channel_test.dart  adblocker_core_test.dart
adblocker_manager/: pubspec.yaml
adblocker_manager/lib/: adblocker_manager.dart
adblocker_manager/test/: adblocker_manager_test.dart
assets/: element_hiding.js  resource_loading_blocker_script.js  wrapper_script.js
assets/js/: element_hiding.js  extended-css.min.js  injection_wrapper.js  scriptles.js
assets/raw/: block_ad_resource_loading.js  element_hiding_script.js  observer_script.js
example/: README.md  pubspec.yaml
example/android/: .gitignore  build.gradle  settings.gradle
example/android/app/: build.gradle
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: browser.dart  browser_screen.dart  main.dart  url_input.dart  url_input_section.dart  url_input_text_field.dart
lib/: adblocker_webview.dart  adblocker_webview_flutter.dart
lib/src/: adblocker_webview.dart  adblocker_webview_controller.dart  adblocker_webview_controller_impl.dart  adblocker_webview_widget.dart  block_resource_loading.dart  css.dart  elem_hide.dart  internal_adblocker_webview_controller.dart  js.dart  logger.dart  service_locator.config.dart  service_locator.dart
test/: adblocker_webview_flutter_test.dart  adblocker_webview_test.dart
test/data/repository/: fake_adblocker_repository_impl.dart
test/domain/: fetch_banned_host_use_case_test.dart
test/fakes/: fake_adblocker_repository_impl.dart
(+20 files in other folders)
